@@ -1,4 +1,13 @@
 2012-09-06  Borut Razem  <borutr@users.sourceforge.net>
+  * configure.ac, configure, aclocal.m4, config.h.in, Makefile.in,
+    gpasm/Makefile.in, gplink/Makefile.in, gputils/Makefile.in,
+    header/Makefile.in, lkr/Makefile.in, libgputils/Makefile.in,
+    libiberty/Makefile.am, libiberty/Makefile.in, man/fr/Makefile.in,
+    include/stdhdr.h: updated autotools
+    libiberty/strndup.c: added
+    libiberty/bzero.c: removed
+
+2012-09-06  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/gperror.c, gpasm/directive.c, gpasm/expression.c:
     GPE_NOSYM gperror to gpverror conversion
   * gpasm/directive.c, gpasm/gperror.c, gpasm/gperror.h:
